add some real links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                             <h1>Welcome to becoming More Engaged with your Co-op Membership</h1>
                             <p>This is an experiment in using low powered bluetooth beacons to advertise to people.</p>
                             <ul>
-                                <li>You can register to use your co-op membership card in Android pay</li>
-                                <li>something else</li>
-                                <li>and something else again</li>
+                                <li>You can register to <a href="https://membership.coop.co.uk/mobile-wallet/android-trial">use your co-op membership card in Android pay</a></li>
+                                <li>Visit <a href="https://membership.coop.co.uk">the membership website to find out more</a></li>
+                                <li>or something else</li>
                             </ul>
 
                             <!-- MAIN COLUMN CONTENT ENDS HERE -->
