updates the HTML title which is used in the nearby URL phone notification

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>More Engaged Members</title>
+    <title>Co-op Digital - Membership - Learn more about your co-op membership</title>
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/my-style.css">
